Fix overflow styling

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -14,6 +14,7 @@
 }
 
 .overflow-ellipsis {
+  white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
 }
